# MLOps-end-to-end-pipeline

./: .gitignore  README.md  requirements.txt
.github/workflows/: german-credit-risk-platform-ci.yml
.streamlit/: config.toml
api/: main.py
app/: dashboard.py
artifacts/: decision_threshold.json  fairness_report.json  metrics.json
configs/: fairness_config.json  model_config.json
docs/: production_readiness.md
docs/presentations/: german-credit-risk-stakeholder-briefing.pptx
german_credit_risk_platform/: AGENTS.md  README.md  pyproject.toml  requirements.txt
german_credit_risk_platform/.github/workflows/: ci.yml
german_credit_risk_platform/api/: main.py
german_credit_risk_platform/app/: dashboard.py
german_credit_risk_platform/artifacts/: metrics.json
german_credit_risk_platform/configs/: data_config.json
german_credit_risk_platform/deployment/: Dockerfile  docker-compose.yml
german_credit_risk_platform/deployment/gcp/: README.md
german_credit_risk_platform/docs/: fairness_audit.md  model_card.md
german_credit_risk_platform/src/credit_risk/: data.py  evaluate.py
german_credit_risk_platform/tests/: test_preprocessing.py  test_schema.py
models/: credit_risk_pipeline.joblib
src/credit_risk/: __init__.py  config.py  explain.py  fairness.py  features.py  monitoring.py  predict.py  train.py
tests/: test_api.py  test_explain.py  test_fairness.py
