[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "german-credit-risk-platform"
version = "0.1.0"
description = "German Credit Risk ML/MLOps platform with fairness auditing and FastAPI serving"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
